@@ -6,12 +6,11 @@ import java.util.List;
 
 public class Baralho {
     private final List<Carta> cartas;
-    
-    private final List<Carta> descarte;
+    private final List<Carta> descartes;
 
     public Baralho() {
         this.cartas = new ArrayList<>();
-        this.descarte = new ArrayList<>();
+        this.descartes = new ArrayList<>();
 
         for (var suit : Naipe.values()) {
             for (var rank : Valor.values()) {
@@ -23,16 +22,18 @@ public class Baralho {
     }
 
     public Carta tirarCarta() {
-        return this.cartas.removeFirst();
-    }
-    
-    public void receberDescarte(List<Carta> cartas){
-        this.descarte.addAll(cartas);
+        return this.cartas.remove(0);
     }
 
     public int cartasRestantes() {
         return this.cartas.size();
     }
+
+    public void adicionarDescartes(List<Carta> cartas){
+        this.descartes.addAll(cartas);
+    }
+
+
 
     @Override
     public String toString() {
